cabal-version:      2.4
name:               ast-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Early prototyping with SAST/AST in Haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Håkan Thörngren
maintainer:         hth313@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ast-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      containers,
                      loc,
                      lens,
                      relude,
    hs-source-dirs:   src
    default-language: Haskell2010
